# glr-parser-rs-legacy

./: Cargo.toml  LICENSE  README.md
src/: glr.rs  glr_grammar.rs  glr_lex.rs  lib.rs  test.rs
test_data/: if_else.g  json.g  json.lex  json.p  non-deterministic.g  non-deterministic2.g  python.g  python.lex  python.p  terminal_reduce_test.g
